@startuml

title __COMPOSITION's Class Diagram__\n

  namespace com.atguigu.uml {
    namespace composition {
      class com.atguigu.uml.composition.Computer {
          + setMoniter()
          + setMouse()
      }
    }
  }
  

  namespace com.atguigu.uml {
    namespace composition {
      class com.atguigu.uml.composition.Head {
      }
    }
  }
  

  namespace com.atguigu.uml {
    namespace composition {
      class com.atguigu.uml.composition.IDCard {
      }
    }
  }
  

  namespace com.atguigu.uml {
    namespace composition {
      class com.atguigu.uml.composition.Moniter {
      }
    }
  }
  

  namespace com.atguigu.uml {
    namespace composition {
      class com.atguigu.uml.composition.Mouse {
      }
    }
  }
  

  namespace com.atguigu.uml {
    namespace composition {
      class com.atguigu.uml.composition.Person {
      }
    }
  }
  

  com.atguigu.uml.composition.Computer o-- com.atguigu.uml.composition.Moniter : moniter
  com.atguigu.uml.composition.Computer o-- com.atguigu.uml.composition.Mouse : mouse
  com.atguigu.uml.composition.Person o-- com.atguigu.uml.composition.IDCard : card
  com.atguigu.uml.composition.Person o-- com.atguigu.uml.composition.Head : head


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
